# hobby

./: azure-pipelines.yml  setting.toml
dele/: Cargo.toml
dele/src/: handler.rs  main.rs
facedataset/: main.py  train.csv  valid.csv
fastapiexp/: .dockerignore  .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  mypy.ini  package.json  pyproject.toml  sample.envrc  setup.sh  start-prod.sh  start.sh  tsconfig.json
fastapiexp/fastapiexp/api/: app.py  main.py
fastapiexp/fastapiexp/api/routers/: form.py  predict.py
fastapiexp/fastapiexp/application/: session.py
fastapiexp/fastapiexp/domain/: exceptions.py
fastapiexp/fastapiexp/infrastructure/: di_container.py  environments.py
fastapiexp/fastapiexp/infrastructure/session/: redis_store.py
fastapiexp/public/: index.html  index.js
fastapiexp/tests/api/: conftest.py  test_form.py  test_index.py  test_predict.py
fastapiexp/ts/: index.ts
fastapiredis/: .pre-commit-config.yaml  pyproject.toml
flutterapp/: pubspec.yaml
flutterapp/ios/Runner.xcodeproj/: project.pbxproj
flutterapp/lib/: habit.dart  main.dart  storage.dart
flutterapp/test/: widget_test.dart
imageprocess/: .gitignore  capture.py
k8s/: .gitignore
k8s/onpremises/: main.tf
k8s/onpremises/installscripts/: install-docker.sh  install-kubernetes.sh
k8s/onpremises/modules/gce/: main.tf  outputs.tf
mov/: Cargo.toml
mov/src/: handler.rs  main.rs
